# Agomax

./: .gitignore  LICENSE  MANIFEST.in  README.md  airsim_bridge.py  dashboard.py  pyproject.toml  requirements.txt  requirenment.txt  stress_test.py  test.csv  test.py  train.csv
agomax/: __init__.py  compat.py  config.py  detector.py  exceptions.py  load.py  logger.py  models.py  pipeline.py  preprocess.py  py.typed  threshold.py  tuner.py  utils.py
agomax/core/: __init__.py  ensemble.py  preprocessing.py  threshold.py  tuning.py
agomax/pipeline/: drone_pipeline.py
data/: test_mission.csv  train_mission.csv
examples/: README.md  advanced_config.py  basic_usage.py  streaming.py
models/: explainers.joblib  models.joblib  params.joblib  preprocessor.joblib  scorers.joblib  thresholds.joblib
notebooks/: notebook_ensemble.ipynb  test.csv  train_normal.csv
src/drone_anomaly/: ensemble.py  pipeline.py
testing/: test.py
tests/: README.md  test_integration.py
